# eur-us-bond-scenarios

./: .gitignore  CONTEXT.md  Makefile  README.md
data/: daily.parquet  data.json  monthly.parquet
docs/adr/: 0001-python-ingest-static-ts-viz.md  0002-defer-real-data-fetch.md  0003-resource-off-fred.md
docs/superpowers/plans/: 2026-06-13-eur-us-bond-scenarios.md
ingest/: pyproject.toml
ingest/eur_us_bond_ingest/: align.py  cli.py  export.py  fetch.py  parse.py  sample.py  sources.py
ingest/tests/: test_align.py  test_export.py  test_parse.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: charts.ts  data.ts  main.ts  stats.ts  transform.ts
web/test/: data.test.ts  stats.test.ts  transform.test.ts
