[project]
name = "eur-us-bond-ingest"
version = "0.1.0"
description = "Ingest FRED + ECB macro series into aligned parquet/JSON panels."
requires-python = ">=3.12"
dependencies = ["pandas>=2.2", "pyarrow>=16", "requests>=2.32"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eur_us_bond_ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
